--- a/index.html
+++ b/index.html
@@ -514,12 +514,10 @@
         <div class="star-popup">
             <button class="star-popup-close" onclick="closeStarPopup()">&times;</button>
             <h2>⭐ Hello! ⭐</h2>
-            <div class="question">🎄 Câu hỏi Giáng Sinh:</div>
-            <div class="question">Ngày Giáng Sinh được tổ chức vào ngày nào?</div>
+            <div class="question">🎄 Giáng Sinh An Lành: </div>
+            <div class="question"></div>
             <div class="answer">
-                <strong>Trả lời:</strong> Ngày Giáng Sinh (Christmas) được tổ chức vào ngày 25 tháng 12 hàng năm. 
-                Đây là ngày kỷ niệm sự ra đời của Chúa Giêsu theo đạo Cơ Đốc. 
-                Ngày này được coi là một trong những ngày lễ quan trọng nhất trong năm và được tổ chức trên toàn thế giới với nhiều truyền thống khác nhau như trang trí cây thông, tặng quà, và sum họp gia đình.
+                Chúc gia đình mình một mùa Giáng Sinh bình an, hạnh phúc và đầy ắp tiếng cười. Mong rằng chúng ta luôn bên nhau và yêu thương nhau nhiều hơn nữa.
             </div>
         </div>
     </div>
