--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <div class="question">🎄 Giáng Sinh An Lành: </div>
             <div class="question"></div>
             <div class="answer">
-                Chúc gia đình mình một mùa Giáng Sinh bình an, hạnh phúc và đầy ắp tiếng cười. Mong rằng chúng ta luôn bên nhau và yêu thương nhau nhiều hơn nữa.
+                Chúc cậu một mùa Giáng Sinh bình an, hạnh phúc và đầy ắp tiếng cười.
             </div>
         </div>
     </div>
